--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
     </target>
      
     <target name="compile" depends="init" >
-        <javac destdir="build/classes" debug="true" srcdir="src">
+        <javac destdir="webapp" debug="true" srcdir="src">
             <classpath refid="compile.classpath"/>
         </javac>
     </target>
