--- a/build.xml
+++ b/build.xml
@@ -19,7 +19,7 @@
     </target>
      
     <target name="war" depends="compile">
-        <war destfile="dist/webapp.war" webxml="WebContent/WEB-INF/web.xml">
+        <war destfile="dist/webapp.war" webxml="main/webapp/WEB-INF/web.xml">
             <fileset dir="WebContent"/>
             <lib dir="WebContent/WEB-INF/lib"/>
             <classes dir="build/classes"/>
