--- a/build.xml
+++ b/build.xml
@@ -19,9 +19,9 @@
     </target>
      
     <target name="war" depends="compile">
-        <war destfile="dist/webapp.war" webxml="main/webapp/WEB-INF/web.xml">
+        <war destfile="webapp.war" webxml="webapp/src/main/webapp/WEB-INF/web.xml">
             <fileset dir="WebContent"/>
-            <lib dir="WebContent/WEB-INF/lib"/>
+            <lib dir="webapp/src/main/webapp/WEB-INF/lib"/>
             <classes dir="build/classes"/>
         </war>
     </target>
