--- a/build.xml
+++ b/build.xml
@@ -20,8 +20,7 @@
      
     <target name="war" depends="compile">
         <war destfile="webapp.war" webxml="webapp/src/main/webapp/WEB-INF/web.xml">
-            <fileset dir="WebContent"/>
-            <lib dir="webapp/src/main/webapp/WEB-INF/lib"/>
+            <fileset dir="webapp/src/main/webapp/"/>
             <classes dir="build/classes"/>
         </war>
     </target>
